--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,9 @@
     "@tailwindcss/vite": "^4.1.12",
     "chart.js": "^4.5.0",
     "framer-motion": "^12.23.12",
+    "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.2",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.541.0",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
